--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
+                <p class="masthead-subheading font-weight-light mb-0">鹿児島高専　機械・電子システム工学専攻　新田研究室所属</p>
             </div>
         </header>
         <!-- Portfolio Section-->
