--- a/index.html
+++ b/index.html
@@ -223,20 +223,24 @@
                 <div class="row">
                     <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Location</h4>
+                        <h4 class="text-uppercase mb-4">Profile</h4>
                         <p class="lead mb-0">
-                            2215 John Daniel Drive
+                           松久保　寧
                             <br />
-                            Clark, MO 65243
+                            まつくぼ　やすき
+                            <br />
+                            鹿児島工業高等専門学校　電子制御工学科　卒業
+                            <br />
+                            鹿児島工業高等学校　機械・電子システム工学科　2年
+                            <br />
+                            新田研究室 <テーマ>　インクジェット法を用いた透明導電膜に関する研究
+                            <br />
+                            趣味：ゲーム　(主にdead by daylight)・映画鑑賞
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
@@ -252,7 +256,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; Your Website 2022</small></div>
+            <div class="container"><small>Copyright &copy; ajisto3456 </small></div>
         </div>
         <!-- Portfolio Modals-->
         <!-- Portfolio Modal 1-->
